--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "code-clean"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+license = "MIT/Apache-2.0"
+authors = ["Elichai Turkel <elichai.turkel@gmail.com>"]
+repository = "https://github.com/elichai/code-clean"
+readme = "README.md"
