--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
         run: cargo check --tests
 
       - name: Run cargo fmt
+        if: matrix.os != 'windows-latest'
         run: cargo fmt --all -- --check
 
       - name: Run cargo clippy
