--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -2,5 +2,5 @@ max_width = 120
 use_field_init_shorthand = true
 use_try_shorthand = true
 use_small_heuristics = "Max"
-newline_style = "unix"
+newline_style = "Unix"
 edition = "2024"
